# ocpy09

./: .gitignore  Dockerfile  README.md  db.sqlite3  justfile  pyproject.toml
.github/workflows/: build_docker.yml  lint.yml
authentication/: form.py  urls.py  views.py
authentication/jinja2/authentication/: login.html  signup.html
authentication/migrations/: 0001_initial.py
authentication/templates/authentication/: login.html  signup.html
docker/: Dockerfile  compose.yml  entrypoint.sh
feed/: form.py  models.py  urls.py  views.py
feed/jinja2/feed/: feed_posts.html  subscription_landing.html  user_posts.html
feed/migrations/: 0001_initial.py  0002_initial.py
litrevu/: compose.yml  jinja2.py  mixins.py  settings.py  urls.py
litrevu/jinja2/: base.html  footer.html  header.html
litrevu/jinja2/macros/: button_macros.html  form_macros.html  rating_macros.html
litrevu/litrevu/: asgi.py  settings.py  urls.py  wsgi.py
litrevu/litrevu/templates/: base.html
litrevu/static/styles/components/: button.css  card.css  form.css  star_rating.css
litrevu/static/styles/css/: base.css  footer.css  header.css
litrevu/static/styles/theme/: border.css  colors.css  font-face.css  layout.css  reset.css  scaling.css  spacing.css  typography.css
litrevu/templates/: base.html  header.html
reviews/: form.py  models.py  urls.py  views.py
reviews/jinja2/reviews/: review_form.html
reviews/migrations/: 0001_initial.py
tickets/: apps.py  form.py  models.py  services.py  urls.py  views.py
tickets/jinja2/tickets/: ticket_form.html  ticket_review_form.html
tickets/migrations/: 0001_initial.py  0002_initial.py  0003_remove_ticket_description_ticket_content_and_more.py  0004_alter_ticket_image.py
tickets/templates/tickets/: ticket_creation.html  ticket_form.html
users/: models.py
users/management/commands/: create_test_users.py
users/migrations/: 0001_initial.py
