[tool.uv]
package = false
#===========================
[project]
name = "ocpy09"
version = "0.1.0"
description = "MVP for LITRevu"
authors = [
    { name = "Arnaud Goguelin", email = "arnaud.goguelin@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "django ~= 5.2.5",
    "jinja2>=3.1.6",
    "pillow>=11.3.0",
    "django-extensions ~= 4.1"
]
readme = "README.md"
#===========================
[dependency-groups]
dev = [
    "black>=25.11.0",
    "flake8>=6.1.0",
    "flake8-django>=1.4",
    "ruff ~= 0.12.4",
]
#===========================
[tool.ruff]
line-length = 120
target-version = "py312"
include = ["*.py", "*.pyi"]
exclude = [
    ".eggs",
    ".git",
    ".hg",
    ".mypy_cache",
    ".tox",
    ".venv",
    ".envTemplate",
    "_build",
    "buck-out",
    "build",
    "dist",
    "compose.yml",
    "Dockerfile",
    ".gitignore",
    "__pycache__",
    "old",
    "__init__.py",
    "*.pyc",
    "*/migrations/"
]

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # pyflakes
    "I",      # isort
    "N",      # pep8-naming
    "UP",     # pyupgrade
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "SIM",    # flake8-simplify
    "Q",      # flake8-quotes
]

ignore = []

[tool.ruff.format]
line-ending = "auto"
indent-style = "space"
quote-style = "double"
skip-magic-trailing-comma = false
docstring-code-format = true
docstring-code-line-length = 120

[tool.ruff.lint.flake8-quotes]
inline-quotes = "double"
multiline-quotes = "double"
docstring-quotes = "double"

[tool.ruff.lint.isort]
known-first-party = ["src"]
force-single-line = false
lines-between-types = 1
lines-after-imports = 2

# === Black Configuration ===
[tool.black]
line-length = 120
target-version = ['py312']
include = '\.pyi?$'
exclude = '''
/(
    \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
  | migrations
)/
'''

# === Flake8 Configuration ===
[tool.flake8]
max-line-length = 120
exclude = [
    ".git",
    "__pycache__",
    ".venv",
    "venv",
    "env",
    ".eggs",
    "*.egg",
    "build",
    "dist",
    "migrations",
    "*/migrations/*",
    ".tox",
]
ignore = [
    "E203",  # whitespace before ':' (conflict avec Black)
    "W503",  # line break before binary operator (old style)
]
per-file-ignores = [
    "__init__.py:F401",
    "settings.py:E501",
    "*/migrations/*.py:E501",
]
